Complete D2 data import/shaping sections

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -253,7 +253,7 @@
    "id": "d3373db0-4b46-4aac-8b01-9e6d8dfd92da",
    "metadata": {},
    "source": [
-    "#### GD2 - read census population data"
+    "#### GD2 - read population data"
    ]
   },
   {
@@ -268,12 +268,35 @@
     "    ## read in data file roster\n",
     "    roster = pd.read_csv(roster).set_index('OBJ_NAME')\n",
     "    \n",
-    "    ## load \n",
+    "    ## load all datasets in the roster file\n",
     "    pop_data = dict()\n",
     "    for i in roster.index:\n",
     "        var_names = roster.loc[i, 'VAR_NAME'].split(';')\n",
     "        pop_data[i] = pd.read_csv('A_Input' + '/' + roster.loc[i, 'FILE_NAME'],\n",
     "            usecols = var_names, dtype = str)\n",
+    "        \n",
+    "    ## merge census datasets\n",
+    "    census_i = roster.index[roster.SOURCE == 'data.census.gov'].values\n",
+    "    census_dat_count = 0\n",
+    "    \n",
+    "    for i in census_i:\n",
+    "        pop_data[i] = pop_data[i].loc[1::, :].set_index('GEO_ID')\n",
+    "        if census_dat_count < 1:\n",
+    "            pop_data['census'] = pop_data[i]\n",
+    "            pop_data.pop(i)\n",
+    "            census_dat_count += 1\n",
+    "        else:\n",
+    "            pop_data['census'] = pop_data['census'].join(pop_data[i])\n",
+    "            pop_data.pop(i)\n",
+    "            census_dat_count += 1\n",
+    "            \n",
+    "    ## convert census data to numeric\n",
+    "    def robust_int(x):\n",
+    "        try: x = int(x)\n",
+    "        except: x = 0\n",
+    "        return x\n",
+    "    map_robust_int = lambda x: x.map(robust_int)\n",
+    "    pop_data['census'] = pop_data['census'].apply(map_robust_int)\n",
     "\n",
     "    return pop_data\n",
     "\n",
@@ -287,16 +310,97 @@
    "id": "bd744f8f-2948-4bc1-b8f3-61a41011a660",
    "metadata": {},
    "source": [
-    "#### RD2 - refine and compile census data"
+    "#### RD2 - refine and compile population data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1ba287d1-300b-42d3-a930-6865bcfab541",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def refine_pop_data(pop):\n",
+    "    \n",
+    "    ## -- standardize geographic codes as needed\n",
+    "    state_fips = pop.pop('state_fips')# if needed in future; not currently used\n",
+    "    pop['census'].index = pop['census'].index.str.replace('1400000US', '')\n",
+    "\n",
+    "    ## -- refine life expectancy data and merge into census data\n",
+    "    pop['lifespan'].columns = ['GEO_ID', 'life_expect']\n",
+    "    pop['lifespan'].life_expect = pop['lifespan'].life_expect.astype(float)\n",
+    "    pop['census'] = pop['census'].join(pop['lifespan'].set_index('GEO_ID'))\n",
+    "    pop.pop('lifespan')\n",
+    "    \n",
+    "    ## -- refine voting data\n",
+    "    \n",
+    "    ## filter to necessary data\n",
+    "    i = (pop['vote'].party == 'REPUBLICAN') & (pop['vote'].year == '2020')\n",
+    "    pop['vote'] = pop['vote'].loc[i].drop(['year', 'party', 'state_po'], axis = 1)\n",
+    "    \n",
+    "    ## impute total votes (data is irregular from state to state)\n",
+    "    temp = pop['vote'].copy()\n",
+    "    temp = temp.drop(['totalvotes'], axis = 1)\n",
+    "    temp = temp.set_index(['county_fips', 'mode']).astype(int).reset_index()\n",
+    "    temp = temp.groupby(['county_fips', 'mode']).sum().reset_index()\n",
+    "    total_vote = temp.loc[temp['mode'] == 'TOTAL'].set_index('county_fips')\n",
+    "    total_vote = total_vote.drop('mode', axis = 1)\n",
+    "    seg_vote = temp.loc[temp['mode'] != 'TOTAL'].groupby('county_fips').sum()\n",
+    "    total_vote = pd.concat({'Total': total_vote, 'Alt': seg_vote}, axis = 1)\n",
+    "    total_vote = total_vote.max(axis = 1)\n",
+    "    total_vote = pd.DataFrame({'repvotes':total_vote})\n",
+    "    pop['vote'] = pop['vote'].join(total_vote, on = 'county_fips')\n",
+    "    pop['vote'] = pop['vote'].drop_duplicates('county_fips')\n",
+    "    pop['vote'] = pop['vote'].drop(['mode', 'candidatevotes'], axis = 1)\n",
+    "    del seg_vote, temp, total_vote\n",
+    "    \n",
+    "    ## calculate percentage voting republican\n",
+    "    pop['vote'] = pop['vote'].set_index('county_fips').astype(float)\n",
+    "    pop['vote']['reppct'] = pop['vote']['repvotes'] / pop['vote']['totalvotes']\n",
+    "    \n",
+    "    ## calculate percentage of population that voted\n",
+    "    county_total = pd.DataFrame(pop['census']['DP05_0001E'])\n",
+    "    county_total['county'] = [i[0:5] for i in county_total.index]\n",
+    "    county_total = county_total.groupby('county').sum().astype(int)\n",
+    "    pop['vote'] = pop['vote'].join(county_total)\n",
+    "    pop['vote']['totalpct'] = pop['vote']['totalvotes'] / pop['vote']['DP05_0001E']\n",
+    "    pop['vote'].loc[pop['vote'].totalpct > 1, 'totalpct'] = 159633396 / 331449281\n",
+    "    pop['vote'] = pop['vote'][['reppct', 'totalpct']]\n",
+    "    \n",
+    "    ## merge voting data into census and convert to counts\n",
+    "    pop['census']['county'] = [i[0:5] for i in pop['census'].index]\n",
+    "    pop['census'] = pop['census'].reset_index().set_index('county').join(pop['vote'])\n",
+    "    pop = pop['census'].set_index('GEO_ID')\n",
+    "    pop['state'] = [i[0:2] for i in pop.index]\n",
+    "    \n",
+    "    ## -- impute missing data\n",
+    "    \n",
+    "    ## impute at the state level\n",
+    "    state_mean = pop.copy()[['life_expect', 'reppct', 'totalpct', 'state']]\n",
+    "    state_mean = state_mean.groupby('state').mean().round(2)\n",
+    "    state_mean = state_mean.loc[pop.state]\n",
+    "    for i in state_mean.columns:\n",
+    "        j = pop[i].isna().values\n",
+    "        pop.loc[j, i] = state_mean.loc[j, i].values\n",
+    "    \n",
+    "    ## impute at the national level\n",
+    "    for i in state_mean.columns:\n",
+    "        j = pop[i].isna().values\n",
+    "        pop.loc[j, i] = pop[i].mean()\n",
+    "    del state_mean\n",
+    "    \n",
+    "    ## convert vote proportions to counts\n",
+    "    pop['rep_vote'] = pop['reppct'] * pop['totalpct'] * pop['DP05_0001E']\n",
+    "    pop['rep_vote'] = pop['rep_vote'].round().astype(int)\n",
+    "    pop['total_vote'] = (pop['totalpct'] * pop['DP05_0001E']).round().astype(int)\n",
+    "    pop = pop.drop(['reppct', 'totalpct', 'state'], axis = 1).round(1)\n",
+    "    \n",
+    "    return pop\n",
+    "\n",
+    "## execute code\n",
+    "pop_data = refine_pop_data(pop = pop_data.copy())\n",
+    "log_time('RD2')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a1a2da6a-4fc5-472a-b366-373019afd73f",
    "metadata": {},
    "outputs": [],
@@ -325,8 +429,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4df65672-a010-40b2-94ac-3906eae80072",
+   "metadata": {},
+   "source": [
+    "# Model Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4960839f-ac9e-4197-bac4-d6dd25eab70d",
+   "metadata": {},
+   "source": [
+    "#### MD1 - Reconcile geographic and population dataset tracts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "8470b8b1-5eb8-4a8b-ae8e-73f34d99cc6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90542624-5a86-4e97-b5a6-1d3c4845dd75",
+   "metadata": {},
+   "source": [
+    "#### MD2 - Precalculate tract-to-tract distance matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6fb3cca-b253-4240-8d2f-15f99fa62a87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc19f1f2-f863-4872-8427-023b5a662713",
+   "metadata": {},
+   "source": [
+    "#### MD3 - Calculate helper functions for modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "698a3688-72ee-4f26-8487-ec47ad835e35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ceac255-b803-4fd3-a016-63a5473ef61b",
+   "metadata": {},
+   "source": [
+    "#### MD4 - Conduct two-stage agglomeration clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20f5eba1-fa93-4217-9df6-626a48df66d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1665fce9-de4f-4319-923f-e351217c78a3",
+   "metadata": {},
+   "source": [
+    "# Enrich Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85238579-7718-4801-bda4-a45d6d7d5485",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9720fc5b-7dd3-40ae-ba79-a0bfd874e3bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d58595a4-ffa6-407a-9fce-a86f9bfadef9",
    "metadata": {},
    "outputs": [
@@ -335,13 +535,14 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 13:34:44\n",
-      "   H3: 13:34:44\n",
-      "  GD1: 13:34:45\n",
-      "  RD1: 13:34:45\n",
-      "  GD2: 13:34:50\n",
-      "  RD3: 13:34:50\n",
-      "  End: 13:34:50\n"
+      "   H2: 13:20:51\n",
+      "   H3: 13:20:51\n",
+      "  GD1: 13:20:51\n",
+      "  RD1: 13:20:51\n",
+      "  GD2: 13:20:57\n",
+      "  RD2: 13:20:57\n",
+      "  RD3: 13:20:57\n",
+      "  End: 13:20:57\n"
      ]
     }
    ],
