Build revised cluster modeling and solution selection functionality (stage one)

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "54ca8b13-5c8a-41df-b762-d948d0e36e70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##########==========##########==========##########==========##########=========="
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c84ff307-1f5b-4341-9bd9-90d82b9a60b1",
    "metadata": {},
@@ -18,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "2893cbc5-099e-469b-88d6-3481d734115b",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,11 @@
     "from cartopy.crs        import LambertConformal, PlateCarree\n",
     "from dbfread            import DBF\n",
     "from docx               import Document\n",
-    "from textwrap           import fill as txt_wrap"
+    "from textwrap           import fill as txt_wrap\n",
+    "from geopy.distance     import geodesic\n",
+    "from ipyparallel        import Cluster\n",
+    "from sklearn.cluster    import AgglomerativeClustering\n",
+    "from functools          import partial"
    ]
   },
   {
@@ -49,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e061a3d-8cb6-4bd5-8f67-881c337b1e71",
    "metadata": {},
    "outputs": [],
@@ -102,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9577a3a0-6eb6-4a48-a510-a8d779269232",
    "metadata": {},
    "outputs": [],
@@ -131,10 +145,12 @@
     "\n",
     "## time-saver settings\n",
     "set_acceleration = {\n",
-    "    'dbf_cache':True,\n",
-    "    'sample_size':1/20,\n",
-    "    'distance_cache':False,\n",
-    "    'cluster_cache':False\n",
+    "    'dbf_cache':      True,\n",
+    "    'sample_size':    1/16,\n",
+    "    'pop_cache':      True,\n",
+    "    'distance_cache': True,\n",
+    "    'cluster_parallel_cores':6,\n",
+    "    'cluster_cache':  True\n",
     "    }\n",
     "\n",
     "## map parameters\n",
@@ -143,10 +159,8 @@
     "    'map_proj': LambertConformal(\n",
     "        central_longitude = (-124.73 - 66.95) / 2,\n",
     "        central_latitude = (25.12 + 49.38) / 2,\n",
-    "        standard_parallels = (25.12, 49.38)\n",
-    "        )\n",
+    "        standard_parallels = (25.12, 49.38))\n",
     "    }\n",
-    "\n",
     "log_time('H3')"
    ]
   },
@@ -168,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f9b030f7-3b12-41e6-9dc5-1fe7eabbf20e",
    "metadata": {},
    "outputs": [
@@ -225,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b3fd248c-6dab-40fe-83a5-2228ac349e24",
    "metadata": {},
    "outputs": [],
@@ -239,6 +253,9 @@
     "    ## take systematic sample of the data\n",
     "    i = np.arange(0, dat.shape[0]) % int(1 / too_much)\n",
     "    dat = dat.loc[i == 0, ]\n",
+    "    \n",
+    "    ## set index\n",
+    "    dat = dat.rename({'GEOID':'GEO_ID'}, axis = 1).set_index('GEO_ID')\n",
     "\n",
     "    ## return data\n",
     "    return dat\n",
@@ -258,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "28942f36-b9af-41e1-a844-c489d8d20c5b",
    "metadata": {},
    "outputs": [],
@@ -300,9 +317,7 @@
     "\n",
     "    return pop_data\n",
     "\n",
-    "## execute code\n",
-    "pop_data = read_pop_data()\n",
-    "log_time('GD2')"
+    "## execute code - see RD2"
    ]
   },
   {
@@ -315,10 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1ba287d1-300b-42d3-a930-6865bcfab541",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Build/Cache Decision: Cache\n"
+     ]
+    }
+   ],
    "source": [
     "def refine_pop_data(pop):\n",
     "    \n",
@@ -336,7 +359,8 @@
     "    \n",
     "    ## filter to necessary data\n",
     "    i = (pop['vote'].party == 'REPUBLICAN') & (pop['vote'].year == '2020')\n",
-    "    pop['vote'] = pop['vote'].loc[i].drop(['year', 'party', 'state_po'], axis = 1)\n",
+    "    pop['vote'] = pop['vote'].loc[i].drop(['year', 'party', 'state_po'],\n",
+    "                                          axis = 1)\n",
     "    \n",
     "    ## impute total votes (data is irregular from state to state)\n",
     "    temp = pop['vote'].copy()\n",
@@ -395,10 +419,20 @@
     "    pop['total_vote'] = (pop['totalpct'] * pop['DP05_0001E']).round().astype(int)\n",
     "    pop = pop.drop(['reppct', 'totalpct', 'state'], axis = 1).round(1)\n",
     "    \n",
+    "    ## export result\n",
+    "    pop.to_csv('B_Intermediate/pop_data.csv.gz')\n",
     "    return pop\n",
     "\n",
+    "def read_refine_pop_data():\n",
+    "    pop_data = read_pop_data()\n",
+    "    pop_data = refine_pop_data(pop = pop_data.copy())\n",
+    "    return pop_data\n",
+    "    \n",
+    "\n",
     "## execute code\n",
-    "pop_data = refine_pop_data(pop = pop_data.copy())\n",
+    "pop_data = build_or_cache(function = read_refine_pop_data,\n",
+    "    address = 'B_Intermediate/pop_data.csv.gz',\n",
+    "    permit = set_acceleration['pop_cache'])\n",
     "log_time('RD2')"
    ]
   },
@@ -412,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a1a2da6a-4fc5-472a-b366-373019afd73f",
    "metadata": {},
    "outputs": [],
@@ -430,6 +464,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15edf0c1-3995-4c01-9364-0630edb65e14",
+   "metadata": {},
+   "source": [
+    "#### RD4 - Reconcile geographic and population dataset tracts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9390a35a-4e92-4f56-90c3-adae3c2952f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reconcile_data(geo = geo_data, pop = pop_data):\n",
+    "    pop = pop.loc[geo.index]\n",
+    "    return geo, pop\n",
+    "\n",
+    "##  execute code\n",
+    "geo_data, pop_data = reconcile_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4df65672-a010-40b2-94ac-3906eae80072",
    "metadata": {},
    "source": [
@@ -438,67 +495,227 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4960839f-ac9e-4197-bac4-d6dd25eab70d",
-   "metadata": {},
-   "source": [
-    "#### MD1 - Reconcile geographic and population dataset tracts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8470b8b1-5eb8-4a8b-ae8e-73f34d99cc6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "90542624-5a86-4e97-b5a6-1d3c4845dd75",
    "metadata": {},
    "source": [
-    "#### MD2 - Precalculate tract-to-tract distance matrix"
+    "#### MD1 - Precalculate tract-to-tract distance matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c6fb3cca-b253-4240-8d2f-15f99fa62a87",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Build/Cache Decision: Cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "## define function to do distance compuations in parallel\n",
+    "def measure_distance_in_parallel(geo = geo_data):\n",
+    "    \n",
+    "    xy = list(zip(geo.INTPTLAT.values, geo.INTPTLON.values))\n",
+    "    the_iter = list(range(0, len(xy)))\n",
+    "    \n",
+    "    ## define engine function that will run on each parallel process\n",
+    "    def measure_distance_parallel_slice(n, xy_col = xy):\n",
+    "        from geopy.distance import geodesic # for parallel process\n",
+    "        xy_col = xy_col.copy()\n",
+    "        xy_row = xy_col[n]\n",
+    "        xy_dist = []\n",
+    "        for i in xy_col[0:n]: xy_dist.append(0)\n",
+    "        for i in xy_col[n::]:\n",
+    "            xy_dist.append(int(round(geodesic(xy_row, i).miles)))\n",
+    "        return xy_dist\n",
+    "\n",
+    "    ## run engine in parallel for each slice of the data\n",
+    "    with Cluster(n = 6) as clust:\n",
+    "        view = clust.load_balanced_view()\n",
+    "        asyncresult = view.map_async(measure_distance_parallel_slice, the_iter)\n",
+    "        asyncresult.wait_interactive()\n",
+    "        result = asyncresult.get()\n",
+    "        \n",
+    "    ## package results and export\n",
+    "    result = np.array(result)\n",
+    "    result = result + result.T\n",
+    "    result = pd.DataFrame(result)\n",
+    "    result.to_csv('B_Intermediate/tract_distance.csv.gz')\n",
+    "    return result\n",
+    "\n",
+    "## execute code\n",
+    "tract_distance = build_or_cache(\n",
+    "    function = measure_distance_in_parallel,\n",
+    "    address = 'B_Intermediate/tract_distance.csv.gz',\n",
+    "    permit = set_acceleration['distance_cache'])\n",
+    "log_time('MD1')"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "bc19f1f2-f863-4872-8427-023b5a662713",
    "metadata": {},
    "source": [
-    "#### MD3 - Calculate helper functions for modeling"
+    "#### MD2 - Make one-stage agglomeration clustering functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "698a3688-72ee-4f26-8487-ec47ad835e35",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Build/Cache Decision: Cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "## score model\n",
+    "def agglom_score(clusters, dist):\n",
+    "    \n",
+    "    ## load libraries (enables parallel processing)\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    ## construct matrix of points that are in the same group\n",
+    "    score = clusters.reshape(clusters.shape[0], 1)\n",
+    "    score = (score == score.T).astype(int)\n",
+    "    \n",
+    "    ## sum distance between points in the same cluster\n",
+    "    score = (dist * score).sum().sum()\n",
+    "    return score.astype(int)\n",
+    "\n",
+    "## generate partition of census tracts into k clusters based on proximity\n",
+    "def agglom_ml(k, dist = tract_distance, score_func = agglom_score):\n",
+    "    \n",
+    "    ## load libraries (enables parallel processing)\n",
+    "    from sklearn.cluster import AgglomerativeClustering # for parallel process\n",
+    "    from numpy           import append\n",
+    "    \n",
+    "    ## divide census tracts into clusters\n",
+    "    ml = AgglomerativeClustering(n_clusters = k,\n",
+    "                                 affinity = 'precomputed',\n",
+    "                                 linkage = 'average',\n",
+    "                                 compute_full_tree = False)\n",
+    "    ml_clusters = ml.fit_predict(dist)\n",
+    "    \n",
+    "    ## score the quality of the cluster solution\n",
+    "    ml_score = score_func(ml_clusters, dist)\n",
+    "    ml_clusters = append(ml_clusters, ml_score)\n",
+    "    \n",
+    "    ## export results\n",
+    "    return ml_clusters\n",
+    "\n",
+    "## find best solution (using the fit curve 'elbow' approach)\n",
+    "def find_best_cluster_solution(cluster_batch):\n",
+    "\n",
+    "    ## extract x and y\n",
+    "    x = cluster_batch.columns.values\n",
+    "    y = cluster_batch.iloc[cluster_batch.shape[0] - 1, :].values\n",
+    "    \n",
+    "    ## regularize x and y\n",
+    "    x = (x - np.min(x)) / (np.max(x) - np.min(x))\n",
+    "    y = (y - np.min(y)) / (np.max(y) - np.min(y))\n",
+    "    x = x.reshape(-1, 1)\n",
+    "    y = y.reshape(-1, 1)\n",
+    "    \n",
+    "    ## generate reference x and y\n",
+    "    x_ref = np.arange(0, 1, 0.01)\n",
+    "    x_ref = x_ref.reshape(-1, 1)\n",
+    "    y_ref = 1 - x_ref\n",
+    "    x_ref = x_ref\n",
+    "    \n",
+    "    ## calculate distances between xy and xy_ref\n",
+    "    x_dist = (x - x_ref.T)**2\n",
+    "    y_dist = (y - y_ref.T)**2\n",
+    "    elbow_score = x_dist + y_dist\n",
+    "    del x_dist, y_dist, x, y, x_ref, y_ref\n",
+    "    \n",
+    "    ## find the solution that is furthest from the line of equality (the elbow)\n",
+    "    elbow_score = elbow_score.min(axis = 1)\n",
+    "    elbow_score = (elbow_score == np.max(elbow_score)).astype(int)\n",
+    "    elbow_score = elbow_score.reshape(1, -1)\n",
+    "    cluster_batch = np.append(cluster_batch, elbow_score, axis = 0)\n",
+    "    \n",
+    "    ##  return object\n",
+    "    return cluster_batch\n",
+    "    \n",
+    "## fit clusters in parallel for k = 2 through 50\n",
+    "def agglom_batch(k_min = 2, k_max = 50, f = agglom_ml,\n",
+    "                 cores = set_acceleration['cluster_parallel_cores']):\n",
+    "    \n",
+    "    ## bound check parameters and construct model list\n",
+    "    k_min = max(k_min, 2)\n",
+    "    k_max = max(k_min + 1, k_max) + 1\n",
+    "    k_range = list(range(k_min, k_max))\n",
+    "    \n",
+    "    ## run models in parallel\n",
+    "    with Cluster(n = cores) as clust:\n",
+    "        view = clust.load_balanced_view()\n",
+    "        asyncresult = view.map_async(f, k_range)\n",
+    "        asyncresult.wait_interactive()\n",
+    "        result = asyncresult.get()\n",
+    "    \n",
+    "    ## package results and identity best solution\n",
+    "    result = pd.DataFrame(np.array(result).T)\n",
+    "    result.columns = k_range\n",
+    "    result = find_best_cluster_solution(result)\n",
+    "    result = pd.DataFrame(result, columns = k_range)\n",
+    "    result.to_csv('B_Intermediate/cluster_level_one.csv.gz')\n",
+    "    return result\n",
+    "\n",
+    "## test code\n",
+    "cluster_level_one = build_or_cache(\n",
+    "    function = agglom_batch,\n",
+    "    address = 'B_Intermediate/cluster_level_one.csv.gz',\n",
+    "    permit = set_acceleration['cluster_cache'])\n",
+    "log_time('MD2')"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5ceac255-b803-4fd3-a016-63a5473ef61b",
    "metadata": {},
    "source": [
-    "#### MD4 - Conduct two-stage agglomeration clustering"
+    "#### MD3 - Conduct two-stage agglomeration clustering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "20f5eba1-fa93-4217-9df6-626a48df66d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function agglom_ml at 0x1a40d60e0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "functools.partial(<function agglom_ml at 0x1a40d60e0>, dist=3)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## TODO NOTE: use partial(dist=) to change default distance matrix of agglom_ml\n",
+    "def agglom_within_agglom(f = agglom_batch, cl1 = cluster_level_one):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -526,26 +743,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d58595a4-ffa6-407a-9fce-a86f9bfadef9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time log:\n",
-      "   H2: 13:20:51\n",
-      "   H3: 13:20:51\n",
-      "  GD1: 13:20:51\n",
-      "  RD1: 13:20:51\n",
-      "  GD2: 13:20:57\n",
-      "  RD2: 13:20:57\n",
-      "  RD3: 13:20:57\n",
-      "  End: 13:20:57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "log_time()"
    ]
