Calculate statistics at the cluster (L1) level

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -192,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Build\n"
+      "Build/Cache Decision: Cache\n"
      ]
     }
    ],
@@ -343,7 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Build\n"
+      "Build/Cache Decision: Cache\n"
      ]
     }
    ],
@@ -518,46 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Build/Cache Decision: Build\n",
-      "Starting 6 engines with <class 'ipyparallel.cluster.launcher.LocalEngineSetLauncher'>\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "097313ae71104a55b7109e5eb1368084",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?engine/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e58233584ed54c53b02e14853f494541",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "measure_distance_parallel_slice:   0%|          | 0/4499 [00:00<?, ?tasks/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping engine(s): 1652372201\n",
-      "engine set stopped 1652372201: {'engines': {'0': {'exit_code': 0, 'pid': 16773, 'identifier': '0'}, '1': {'exit_code': 0, 'pid': 16774, 'identifier': '1'}, '2': {'exit_code': 0, 'pid': 16775, 'identifier': '2'}, '3': {'exit_code': 0, 'pid': 16776, 'identifier': '3'}, '4': {'exit_code': 0, 'pid': 16777, 'identifier': '4'}, '5': {'exit_code': 0, 'pid': 16778, 'identifier': '5'}}, 'exit_code': 0}\n",
-      "Stopping controller\n",
-      "Controller stopped: {'exit_code': 0, 'pid': 16761, 'identifier': 'ipcontroller-1652372200-ip8i-16756'}\n"
+      "Build/Cache Decision: Cache\n"
      ]
     }
    ],
@@ -798,21 +759,172 @@
     "    permit   = set_acceleration['cluster_L2_cache']\n",
     "    )\n",
     "geo_data = geo_data.join(cluster_level_two)\n",
-    "del cluster_level_two"
+    "del cluster_level_two\n",
+    "log_time('MD3')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1665fce9-de4f-4319-923f-e351217c78a3",
+   "id": "95e95783-7f9d-4fc1-b003-793470f42c84",
    "metadata": {},
    "source": [
-    "# Enrich Data"
+    "# Calculate Cluster Statistics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d58595a4-ffa6-407a-9fce-a86f9bfadef9",
+   "id": "e30d771c-3dfa-4800-93d7-9eaed07203fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## -- variable codes codes\n",
+    "## DP02_0068E - Bachlor's Degree* (out of total pop)\n",
+    "## DP03_0088E - Income Per Capita** (compare to average)\n",
+    "## DP05_0001E - Total Population*\n",
+    "## DP05_0077E - Non-Hispanic White\n",
+    "## life_expect - life expectancy** (compare to average)\n",
+    "## rep_vote   - 2020 POTUS republican voters* (out of total votes out of pop)\n",
+    "## total_vote - 2020 POTUS total voters*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96e44012-fc80-41ea-b644-49f2d9f81338",
+   "metadata": {},
+   "source": [
+    "#### CSS1 - Aggregate statistics to cluster level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "449db4f6-89a7-49c1-9d00-00e77016f2c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## calculate statistics by summation\n",
+    "i = {'DP05_0001E': 'total_pop',\n",
+    "    'DP02_0068E': 'college_degree',\n",
+    "    'total_vote': 'total_vote',\n",
+    "    'rep_vote'  : 'rep_vote'}\n",
+    "sum_stats = pop_data[i.keys()].copy()\n",
+    "sum_stats.columns = i.values()\n",
+    "sum_stats = sum_stats.join(geo_data.l1_cluster).groupby('l1_cluster').sum()\n",
+    "\n",
+    "## calculate statistics by weighted average\n",
+    "i = {'life_expect': 'life_expect',\n",
+    "    'DP03_0088E' : 'income_pc'}\n",
+    "av_stats = pop_data[i.keys()].copy()\n",
+    "av_stats.columns = i.values()\n",
+    "av_stats = av_stats.join(geo_data[['INTPTLAT', 'INTPTLON']])\n",
+    "for i in av_stats.columns: av_stats[i] = av_stats[i] * pop_data['DP05_0001E']\n",
+    "av_stats = av_stats.join(geo_data.l1_cluster).groupby('l1_cluster').sum()\n",
+    "for i in av_stats.columns: av_stats[i] = av_stats[i] / sum_stats['total_pop']\n",
+    "av_stats = av_stats.round(3)\n",
+    "\n",
+    "## merge status\n",
+    "cluster_stats = sum_stats.join(av_stats)\n",
+    "del av_stats, sum_stats\n",
+    "log_time('CSS1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0127f950-ff08-4315-a527-81ad7d265452",
+   "metadata": {},
+   "source": [
+    "# Prepare Visualization Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7399d4c-7b28-4412-a896-4955b2b66b0e",
+   "metadata": {},
+   "source": [
+    "#### PVD1 - Generate Tract Centroid Voronoi Decomp. Polygons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1412ba81-f5bc-4cdc-87e1-fa0a7e6e750a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8179d05e-e7e3-40b3-8fd4-65514612a7cf",
+   "metadata": {},
+   "source": [
+    "#### PVD2 - Generate Cluster Polygons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3c4676da-dc84-42b5-a6d8-4c62a5f6ffcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## L1, L2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b379f21e-f5c7-407d-a952-d277d0d59e06",
+   "metadata": {},
+   "source": [
+    "#### PVD3 - Calculate Bar Chart Coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9d9bc29d-3185-4283-b87e-762e8c74827d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## votes, lifespan, income, college"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c68dbd4-26b4-4ee4-8d7b-6ddeb8ea3371",
+   "metadata": {},
+   "source": [
+    "# Render Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ac184b-0922-4b57-b5f8-742e0a0763cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2341179-ff09-40c6-8138-d2b195afc53c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b648d2-2c43-48a9-9520-60482c4f46fd",
+   "metadata": {},
+   "source": [
+    "# Footer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
    "outputs": [
     {
@@ -820,37 +932,23 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 12:16:30\n",
-      "   H3: 12:16:30\n",
-      "  GD1: 12:16:33\n",
-      "  RD1: 12:16:33\n",
-      "  RD2: 12:16:40\n",
-      "  RD3: 12:16:40\n",
-      "  MD1: 12:23:25\n",
-      "  MD2: 12:23:45\n",
-      "  End: 12:25:28\n"
+      "   H2: 09:44:41\n",
+      "   H3: 09:44:41\n",
+      "  GD1: 09:44:41\n",
+      "  RD1: 09:44:41\n",
+      "  RD2: 09:44:41\n",
+      "  RD3: 09:44:41\n",
+      "  MD1: 09:44:44\n",
+      "  MD2: 09:44:44\n",
+      "  MD3: 09:44:44\n",
+      " CSS1: 09:44:44\n",
+      "  End: 09:44:44\n"
      ]
     }
    ],
    "source": [
     "log_time()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51179468-2a82-4db1-be14-74e83d629377",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
