Build out cluster polygon generation functions

--- a/1_pop_cluster_map.ipynb
+++ b/1_pop_cluster_map.ipynb
@@ -50,7 +50,12 @@
     "from geopy.distance     import geodesic\n",
     "from ipyparallel        import Cluster\n",
     "from sklearn.cluster    import AgglomerativeClustering\n",
-    "from functools          import partial"
+    "from functools          import partial\n",
+    "\n",
+    "from scipy.spatial      import Voronoi\n",
+    "from shapely.geometry   import Polygon\n",
+    "from shapely.ops        import unary_union\n",
+    "from shapely.validation import make_valid"
    ]
   },
   {
@@ -760,6 +765,8 @@
     "    )\n",
     "geo_data = geo_data.join(cluster_level_two)\n",
     "del cluster_level_two\n",
+    "geo_data.l2_index = geo_data.l1_cluster.astype(str) +\\\n",
+    "    (geo_data.l2_cluster + 65).apply(chr)\n",
     "log_time('MD3')"
    ]
   },
@@ -847,11 +854,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1412ba81-f5bc-4cdc-87e1-fa0a7e6e750a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_voronoi(xy = geo_data[['INTPTLON', 'INTPTLAT']]):\n",
+    "    \n",
+    "    voronoi_object = Voronoi(np.array(xy))\n",
+    "    vor_poly_list = [None for x in range(0, xy.shape[0] + 1)]\n",
+    "    \n",
+    "    for i in voronoi_object.point_region:\n",
+    "        v_poly = [x for x in voronoi_object.regions[i] if x >= 0]\n",
+    "        v_poly = voronoi_object.vertices[v_poly, :]\n",
+    "        try: v_poly = make_valid(Polygon(v_poly))\n",
+    "        except: v_poly = None\n",
+    "        vor_poly_list[i] = v_poly\n",
+    "\n",
+    "    return vor_poly_list\n",
+    "\n",
+    "## execute code\n",
+    "tract_polys = calculate_voronoi()\n",
+    "log_time('PVD1')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -863,12 +888,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3c4676da-dc84-42b5-a6d8-4c62a5f6ffcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## L1, L2"
+    "def merge_polys(polys, groups):\n",
+    "    clust_poly = dict()\n",
+    "    for i in set(groups):\n",
+    "        bucket = []\n",
+    "        for j in np.where(groups == i)[0]:\n",
+    "            if polys[j] is not None: bucket.append(polys[j])\n",
+    "        clust_poly[i] = unary_union(bucket)\n",
+    "    return clust_poly    \n",
+    "\n",
+    "## execute code\n",
+    "clust_polys_l1 = merge_polys(tract_polys, geo_data.l1_cluster)\n",
+    "clust_polys_l2 = merge_polys(tract_polys, geo_data.l2_index)\n",
+    "log_time('PVD2')"
    ]
   },
   {
@@ -881,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9d9bc29d-3185-4283-b87e-762e8c74827d",
    "metadata": {},
    "outputs": [],
@@ -923,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "257b6438-6ef8-4ea2-b4d8-a5039053e607",
    "metadata": {},
    "outputs": [
@@ -932,17 +969,19 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 09:44:41\n",
-      "   H3: 09:44:41\n",
-      "  GD1: 09:44:41\n",
-      "  RD1: 09:44:41\n",
-      "  RD2: 09:44:41\n",
-      "  RD3: 09:44:41\n",
-      "  MD1: 09:44:44\n",
-      "  MD2: 09:44:44\n",
-      "  MD3: 09:44:44\n",
-      " CSS1: 09:44:44\n",
-      "  End: 09:44:44\n"
+      "   H2: 11:10:41\n",
+      "   H3: 11:10:41\n",
+      "  GD1: 11:10:41\n",
+      "  RD1: 11:10:41\n",
+      "  RD2: 11:10:41\n",
+      "  RD3: 11:10:41\n",
+      "  MD1: 11:10:44\n",
+      "  MD2: 11:10:44\n",
+      "  MD3: 11:10:44\n",
+      " CSS1: 11:10:44\n",
+      " PVD1: 11:10:44\n",
+      " PVD2: 11:10:45\n",
+      "  End: 11:10:45\n"
      ]
     }
    ],
